--- a/web/src/css/imagecrop.css
+++ b/web/src/css/imagecrop.css
@@ -1,15 +1,13 @@
 #wrapper {
-    display: inline-flex;
+    display: flex;
     text-align: center;
 }
 
 #left {
-    flex: 0 0 50% 65%;
+    flex: 1;
 }
 
 #right {
-    flex: 0 0 0 0;
-    width: max-content;
     background: linear-gradient(90deg, rgb(0, 0, 0) 50%, transparent 50%), linear-gradient(90deg, rgb(0, 0, 0) 50%, transparent 50%), linear-gradient(0deg, rgb(0, 0, 0) 50%, transparent 50%), linear-gradient(0deg, rgb(0, 0, 0) 50%, transparent 50%);
     background-repeat: repeat-x, repeat-x, repeat-y, repeat-y;
     background-size: 15px 4px, 15px 4px, 4px 15px, 4px 15px;
@@ -29,6 +27,7 @@
 #rigt-container {
     margin-left: 10px;
     text-align: center;
+    flex: 1;
 }
 
 #crop-annotate-button {
